# starship-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md
agent/: Cargo.toml  Cross.toml  staragent.yaml
agents/: Modelfile.ergo  agent_daemon.py  codex-agent.yaml  config.yaml  designer-agent.yaml  ergo.yaml  knowledge_store.yaml  orchestrator.yaml  proxy.yaml  romi.yaml  run_agent.sh  system_health.yaml
cli/: go.mod  main.go
config/: fleet.yaml  hooks.json  models.yaml  starship-health-checker.service
dashboard/: server.py
deploy/: agnetic-dashboard-web.service  agnetic-status-bridge.service  nats.service  staragent.service  starship-agent-mesh.target  starship-agent@.service
docs/: AGENTS.md  AGENT_GUIDE.md  ARCHITECTURE.md  FLEET.md  ISO_TESTING.md  PERFORMANCE_PLAN.md  RECONCILE.md  SYSTEM_GUIDE.md  module-catalog.md
hooks/: sample_logger.py
nats/: agent-bus.conf  subjects.yaml
packaging/: install-starship.sh
runbooks/: cert-expiry.json  disk-space.json  high-cpu.json  memory-pressure.json  security-breach.json  service-down.json
scripts/: agent-health-checker.py  build-deb.sh  build-iso.sh  deploy-agent.sh  install-agent-linux.sh  install-daemon.sh  install-health-checker.sh  install-opencode.sh  iso-firstboot-smoke.sh  smoke-test.sh  start-agents.sh  start-dashboard.sh  test-iso-auto.sh  uninstall-daemon.sh  vendor-opencode.sh
services/: cluster_config.yaml  fleet.py  watchdog.py
src/cpp/: CMakeLists.txt  vector_index.cpp
starshipctl/: go.mod  main.go
systemd/: agnetic-agent@.service  (+8 more)
(+120 files in other folders)
